# biblioteca-python-GUI

bibliotecaGUI/: pyproject.toml
bibliotecaGUI/CTkScrollableDropdown-main/: example.py
bibliotecaGUI/app/: main.py  teste.py  teste_ctktable.py  testecombo.py
bibliotecaGUI/app/frames/: consultarEmprestimo.py  consultarLivors.py  consultarLivros.py  frameLoginContainer.py  welcomeFrame.py
bibliotecaGUI/app/frames/adminFrames/: consultarEmprestimosAdmin.py  consultarLivrosAdmin.py  criarEmprestimo.py  verEmprestimos.py  welcomeAdminFrame.py
bibliotecaGUI/app/requisicoes/: request_handler.py  sessao.py
