[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["José Matheus R. Flora <jmrfloraxbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
packaging = "^23.2"
customtkinter = "^5.2.1"
requests = "^2.31.0"
ctkmenubar = "^0.3"
ctkmessagebox = "^2.5"
ctktable = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
